--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
@@ -29,8 +29,8 @@
         <error-code>404</error-code>
         <location>/errors/404.xhtml</location>
     </error-page>
-    <error-page>
+<!--    <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/errors/exception.xhtml</location>
-    </error-page>
+    </error-page>-->
 </web-app>
