--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
@@ -23,7 +23,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>login.xhtml</welcome-file>
+        <welcome-file>views/login.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
