--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
@@ -29,8 +29,60 @@
         <error-code>404</error-code>
         <location>/errors/404.xhtml</location>
     </error-page>
-<!--    <error-page>
+    <!--    <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/errors/exception.xhtml</location>
     </error-page>-->
+    <security-constraint>
+        <display-name>ModeratorConstraint</display-name>
+        <web-resource-collection>
+            <web-resource-name>ModeratorResources</web-resource-name>
+            <description/>
+            <url-pattern>/views/moderator/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>MODERATOR</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>AdvertiserConstraint</display-name>
+        <web-resource-collection>
+            <web-resource-name>AdvertiserResources</web-resource-name>
+            <description/>
+            <url-pattern>/views/advertiser/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>ADVERTISER</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>UserConstraint</display-name>
+        <web-resource-collection>
+            <web-resource-name>UserResources</web-resource-name>
+            <description/>
+            <url-pattern>/views/user/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>USER</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>BASIC</auth-method>
+        <realm-name>warmlyRealm</realm-name>
+    </login-config>
+    <security-role>
+        <description/>
+        <role-name>MODERATOR</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>ADVERTISER</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>USER</role-name>
+    </security-role>
 </web-app>
