--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/WEB-INF/web.xml
@@ -21,6 +21,9 @@
         <session-timeout>
             30
         </session-timeout>
+        <cookie-config>
+            <http-only>true</http-only>
+        </cookie-config>
     </session-config>
     <welcome-file-list>
         <welcome-file>views/login.xhtml</welcome-file>
@@ -29,10 +32,10 @@
         <error-code>404</error-code>
         <location>/errors/404.xhtml</location>
     </error-page>
-    <!--    <error-page>
+    <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/errors/exception.xhtml</location>
-    </error-page>-->
+    </error-page>
     <security-constraint>
         <display-name>ModeratorConstraint</display-name>
         <web-resource-collection>
